# moxygen

./: .gitignore  CMakeLists.txt  CODEOWNERS  OPENMOQ_CONTRIBUTING.md  compat_design.html  compat_design.md  my_moxygen_notes.md  my_notes.md
.github/: CONTRIBUTING.md
.github/workflows/: getdeps_mac.yml  omoq-auto-merge-sync.yml  omoq-ci-main.yml  omoq-ci-pr.yml  omoq-dev-build.yml  omoq-publish-artifacts.yml  omoq-test-runner.yml  omoq-upstream-sync.yml  omoq-version-release.yml  openmoq-auto-merge-sync.yml  openmoq-ci.yml  openmoq-publish-artifacts.yml  openmoq-upstream-sync.yml  sync-branch-cleanup-on-close.yml  upstream_sync.yml
cmake/: MoxygenTest.cmake  moxygen-config.cmake.in
docker/: Dockerfile  Dockerfile.interop-client
docs/: ARCHITECTURE.md
moxygen/: BidiStreamControl.h  CMakeLists.txt  MoQClient.cpp  MoQClient.h  MoQClientBase.cpp  MoQClientBase.h  MoQCodec.cpp  MoQCodec.h  MoQConsumers.h  MoQFilters.h  MoQFramer.cpp  MoQFramer.h  MoQLocation.h  MoQPublishError.h  MoQRelaySession.cpp  MoQRelaySession.h  MoQRelaySessionCompat.cpp  MoQServer.cpp  MoQServer.h  MoQServerBase.cpp  MoQServerBase.h  MoQSession.cpp  MoQSession.h  MoQSessionBase.h  MoQSessionCompat.cpp  MoQTokenCache.cpp  MoQTokenCache.h  MoQTrackProperties.h  MoQTypes.cpp  MoQTypes.h  MoQVersions.cpp  MoQWebTransportClient.cpp  ObjectReceiver.h  Publisher.h  Subscriber.h
moxygen/compat/: Async.h  BufferAppender.h  BufferIO.h  ByteBuffer.h  ByteBufferQueue.h  ByteCursor.h  CMakeLists.txt  Callbacks.h  Cancellation.h  Config.h  ConnectionId.h  Containers.h  Debug.h  Expected.h  Hash.h  IOBufPayload.cpp  IOBufPayload.h  Logging.h  MoQClientInterface.h  MoQPriorityQueue.cpp  MoQPriorityQueue.h  MoQServerInterface.h  Payload.h  PayloadImpl.cpp  PayloadImpl.h  ProxygenWebTransportAdapter.h  SocketAddress.h  Try.h  Unit.h  Url.h  Varint.h  WebTransportInterface.h
moxygen/events/: MoQDeliveryTimeoutManager.h  MoQDeliveryTimer.cpp  MoQDeliveryTimer.h  MoQExecutor.h  MoQFollyExecutorImpl.cpp  MoQFollyExecutorImpl.h  MoQSimpleExecutor.cpp  MoQSimpleExecutor.h
moxygen/mlog/: CMakeLists.txt  FileMLogger.cpp  FileMLogger.h  MLogger.cpp  MLogger.h  SamplingMLoggerFactory.cpp  SamplingMLoggerFactory.h
moxygen/mlog/test/: CMakeLists.txt  FileMLoggerTest.cpp  SamplingMLoggerFactoryTest.cpp
moxygen/moq_mi/: CMakeLists.txt  MoQMi.cpp
moxygen/moq_mi/test/: CMakeLists.txt  MoQMiTest.cpp
moxygen/moqtest/: LatencyHistogram.h  MoQPerfTestClient.cpp  MoQPerfTestClient.h  MoQPerfTestClientMain.cpp  MoQTestServer.cpp  Utils.cpp
moxygen/openmoq/transport/: CMakeLists.txt
moxygen/openmoq/transport/pico/: CMakeLists.txt  MoQPicoQuicEventBaseClient.cpp  MoQPicoQuicEventBaseClient.h  MoQPicoQuicEventBaseServer.cpp  MoQPicoQuicEventBaseServer.h  MoQPicoQuicServer.cpp  MoQPicoQuicServer.h  MoQPicoServerBase.cpp  MoQPicoServerBase.h  PicoConnectionContext.h  PicoH3WebTransport.cpp  PicoH3WebTransport.h  PicoProtocolDispatcher.h  PicoQuicExecutor.cpp  PicoQuicExecutor.h  PicoQuicSocketHandler.cpp  PicoQuicSocketHandler.h  PicoQuicWebTransport.cpp  PicoQuicWebTransport.h  PicoQuicXLogSink.cpp  PicoQuicXLogSink.h  PicoTransportConfig.h  PicoWebTransportBase.cpp  PicoWebTransportBase.h  README.md  architecture_webtransport.md
moxygen/openmoq/transport/pico/sample/: CMakeLists.txt  PicoEventBaseRelayServer.cpp  PicoRelayServer.cpp  PicoTextClient.cpp
moxygen/relay/: CMakeLists.txt  MoQCache.cpp  MoQCache.h  MoQForwarder.cpp  MoQForwarder.h  MoQRelay.cpp  MoQRelay.h  MoQRelayCompat.cpp  MoQRelayCompat.h
moxygen/relay/test/: MoQCacheTests.cpp  MoQForwarderTest.cpp  MoQRelayTest.cpp  OpenMOQForwarderTest.cpp
moxygen/samples/: CMakeLists.txt
moxygen/samples/date/: CMakeLists.txt  MoQDateServer.cpp  PicoDateServer.cpp
moxygen/samples/flv_receiver_client/: MoQFlvReceiverClient.cpp
moxygen/samples/flv_streamer_client/: MoQFlvStreamerClient.cpp
moxygen/samples/relay/: CMakeLists.txt  PicoRelayServer.cpp
moxygen/samples/switch/: CMakeLists.txt  MoQSwitchPub.cpp  MoQSwitchSub.cpp
moxygen/samples/text-client/: CMakeLists.txt  MoQTextClient.cpp  MoQTextClientMobile.cpp  PicoTextClient.cpp  PyMoQTestClient.cpp
moxygen/stats/: MoQStats.h
moxygen/test/: CMakeLists.txt  MoQCodecTest.cpp  MoQCodecTestStd.cpp  MoQDeliveryTimeoutManagerTest.cpp  MoQFramerTest.cpp  MoQFramerTestStd.cpp  MoQSessionFetchTests.cpp  MoQSessionObjectDeliveryTests.cpp  MoQSessionPublishTests.cpp  MoQSessionRequestUpdateTests.cpp  MoQSessionSubscribeNamespaceTests.cpp  MoQSessionSubscribeTests.cpp  MoQSessionTestCommon.cpp  MoQSessionTestCommon.h  MoQSessionTestCompat.cpp  MoQSessionTests.cpp  MoQTestFixtureCompat.h  MoQTestFrameworkTest.cpp  MockMoQSession.h  MockMoQTransport.h  Mocks.h  TestExecutor.h  TestMain.cpp  TestUtils.cpp  TestUtils.h
moxygen/test/integration/: CMakeLists.txt  IntegrationTestBase.cpp  IntegrationTestBase.h  PicoquicIntegrationTest.cpp
moxygen/tools/moqperf/: MoQPerfClient.cpp  MoQPerfClient.h  main.cpp
moxygen/transports/: CMakeLists.txt  MvfstStdModeAdapter.cpp  PicoquicH3Transport.cpp  PicoquicH3Transport.h  PicoquicMoQClient.cpp  PicoquicMoQClient.h  PicoquicMoQRelayClient.cpp  PicoquicMoQRelayClient.h  PicoquicMoQServer.cpp  PicoquicMoQServer.h  PicoquicRawTransport.cpp  PicoquicRawTransport.h  PicoquicWebTransport.cpp  PicoquicWebTransport.h  ProxygenWebTransportAdapter.cpp
moxygen/transports/openmoq/adapters/: MvfstStdModeAdapter.cpp  MvfstStdModeAdapter.h  ProxygenWebTransportAdapter.cpp  ProxygenWebTransportAdapter.h
moxygen/transports/openmoq/picoquic/: PicoquicH3Transport.cpp  PicoquicH3Transport.h  PicoquicMoQClient.cpp  PicoquicMoQClient.h  PicoquicMoQRelayClient.cpp  PicoquicMoQRelayClient.h  PicoquicMoQServer.cpp  PicoquicMoQServer.h  PicoquicRawTransport.cpp  TransportMode.h
openmoq/: .fork-marker  README.md
openmoq/patches/: 000-openmoq-marker.patch  001-libaio-source-build.patch  001-mac-no-system-packages.patch
openmoq/patches-pending/: 002-trim-folly-optional-deps.patch
scripts/: test_all_modes.sh
standalone/: CMakeLists.txt  check-runner-deps.sh  install-system-deps.sh
(+4 files in other folders)
